--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angular Boilerplate</title>
+    <title>Flower Power</title>
+    <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title">
   </head>
   <body ng-app="MyApp">
-    <div ng-controller="MyCtrl">
-      {{message}}
-    </div>
+    <div ng-view></div>
 
     <!-- Third Party Libraries -->
     <script src="lib/bower_components/angular/angular.min.js"></script>
@@ -17,9 +16,9 @@
     <script src="app/app.js"></script>
 
     <!-- Factory -->
-    <script src="app/factories/MyFactory.js"></script>
+    <script src="app/factories/FirebaseFactory.js"></script>
 
     <!-- Controllers -->
-    <script src="app/controllers/MyCtrl.js"></script>
+    <script src="app/controllers/FlowerCtrl.js"></script>
   </body>
 </html>
